--- a/src/styles/default/main.less
+++ b/src/styles/default/main.less
@@ -7,7 +7,30 @@
 VARIABLES
 ================================================
 */
-@base: #ccc;
+// Breakpoints
+@bp-larger-than-mobile    : 400px;
+@bp-larger-than-phablet   : 550px;
+@bp-larger-than-tablet    : 750px;
+@bp-larger-than-desktop   : 1000px;
+@bp-larger-than-desktophd : 1200px;
+
+// Typography
+@preferred-font: 'Open Sans';
+@font-family: @preferred-font,'Helvetica Neue',Helvetica,Arial,sans-serif;
+
+// Colors
+@primary-color: #33c3f0;
+@secondary-color: #555;
+@border-color: #bbb;
+@background-color: #242628;
+@text-color: #777;
+@link-color: #3b8bba;
+@link-color--active: #0074d9;
+@link-color--hover: #0074d9;
+
+
+// Misc
+@base-radius: 4px;
 
 
 /* 
@@ -28,36 +51,26 @@ apply a natural box layout model to all elements, but allowing components to cha
 */
 html {
   box-sizing: border-box;
+  font-size: 70.83%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
-html {
-  font-size: 70.83%; 
-}
 body {
   font-size: 1.7em; 
   line-height: 1.5;
-  background-color: #242628;
-  /*background-image: url(cloth.png);*/
-  color: #777;
-  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+  background-color: @background-color;
+  color: @text-color;
+  font-family: @font-family;
 }
 
-/* input place holder text */
-::-webkit-input-placeholder {
-   color: #444;
-}
 
-:-moz-placeholder { /* Firefox 18- */
-   color: #444;  
-}
+/* 
+================================================
+MODULES
+================================================
+*/
 
-::-moz-placeholder {  /* Firefox 19+ */
-   color: #444;  
-}
-
-:-ms-input-placeholder {  
-   color: #444;  
-}
+@import 'type.less';
+@import 'form.less';
