--- a/src/styles/default/form.less
+++ b/src/styles/default/form.less
@@ -6,19 +6,19 @@ place holder text
 
 /* input place holder text */
 ::-webkit-input-placeholder {
-   color: #444;
+   color: @text-color--subtle;
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   color: #444;  
+   color: @text-color--subtle;  
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   color: #444;  
+   color: @text-color--subtle;  
 }
 
 :-ms-input-placeholder {  
-   color: #444;  
+   color: @text-color--subtle;  
 }
 
 
@@ -27,15 +27,10 @@ place holder text
 containers
 ================================================
 */
-form {
-  font-size: 1.3rem;
-}
-
 form > div, form fieldset > div {
   padding: 0;
   margin: 0;
-  width: 30%;
-  display: inline-block;
+  display: block;
   margin-left: 1%;
   margin-right: 1%;
 }
@@ -43,17 +38,16 @@ form > div, form fieldset > div {
 label, legend {
   font-weight: normal;
   margin-bottom: 0.5rem;
-  font-size: 1.1rem;
 }
 
 fieldset {
-  border-top: 1px solid #888;
+  border: none;
 }
 
 legend {
-  padding: 0.2rem 0.5rem;
+  padding: 0.2rem 0;
   text-transform: uppercase;
-  border: 1px solid #888;
+  font-size: 1.2rem;
 }
 
 
@@ -73,7 +67,6 @@ input[type="button"] {
   padding: 0 30px;
   color: @secondary-color;
   text-align: center;
-  font-size: 11px;
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
@@ -93,8 +86,8 @@ input[type="button"] {
 buttons and input elements
 ================================================
 */
-button, input, optgroup, select, textarea {
-  color: #bbb;
+.button, button, input, optgroup, select, textarea {
+  color: @text-color--loud;
 }
 
 input[type="date"],
@@ -109,38 +102,35 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-  border: 1px solid #333434;
+  border: 1px solid @border-color--subtle;
   background-color: transparent;
   padding: 1.5px 3px;
-  height: 26px;
+  height: 3.2rem;
   width: 100%;
   border-radius: 4px;
+  font-size: 2rem;
 }
 
-input, textarea, select, fieldset {
-  margin-bottom: 1.5rem;
-}
-
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: #FFF;
+.button.button--primary,
+button.button--primary,
+input[type="submit"].button--primary,
+input[type="reset"].button--primary,
+input[type="button"].button--primary {
+  color: @text-color--loud;
   background-color: #288edf;
   border-color: #134f7f; 
 }
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover,
-input[type="button"].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:focus {
-  color: #FFF;
+.button.button--primary:hover,
+button.button--primary:hover,
+input[type="submit"].button--primary:hover,
+input[type="reset"].button--primary:hover,
+input[type="button"].button--primary:hover,
+.button.button--primary:focus,
+button.button--primary:focus,
+input[type="submit"].button--primary:focus,
+input[type="reset"].button--primary:focus,
+input[type="button"].button--primary:focus {
+  color: @text-color--loud;
   background-color: #4ca1e4;
   border-color: #1EAEDB; 
 }
@@ -153,25 +143,25 @@ input[type="button"][disabled] {
   opacity: 0.3;
   cursor: not-allowed;
 }
-.button-primary[disabled]
-.button.button-primary[disabled],
-button.button-primary[disabled],
-input[type="submit"][disabled].button-primary,
-input[type="reset"][disabled].button-primary,
-input[type="button"][disabled].button-primary {
+.button--primary[disabled]
+.button.button--primary[disabled],
+button.button--primary[disabled],
+input[type="submit"][disabled].button--primary,
+input[type="reset"][disabled].button--primary,
+input[type="button"][disabled].button--primary {
   background-color: #288edf;
   border-color: #134f7f;
 }
-.button.button-primary[disabled]:hover,
-button.button-primary[disabled]:hover,
-input[type="submit"][disabled].button-primary:hover,
-input[type="reset"][disabled].button-primary:hover,
-input[type="button"][disabled].button-primary:hover,
-.button.button-primary[disabled]:focus,
-button.button-primary[disabled]:focus,
-input[type="submit"][disabled].button-primary:focus,
-input[type="reset"][disabled].button-primary:focus,
-input[type="button"][disabled].button-primary:focus {
+.button.button--primary[disabled]:hover,
+button.button--primary[disabled]:hover,
+input[type="submit"][disabled].button--primary:hover,
+input[type="reset"][disabled].button--primary:hover,
+input[type="button"][disabled].button--primary:hover,
+.button.button--primary[disabled]:focus,
+button.button--primary[disabled]:focus,
+input[type="submit"][disabled].button--primary:focus,
+input[type="reset"][disabled].button--primary:focus,
+input[type="button"][disabled].button--primary:focus {
   background-color: #288edf;
   border-color: #134f7f;
 }
@@ -189,4 +179,8 @@ input[type="password"]:focus,
 textarea:focus, select:focus {
   border: 1px solid #33C3F0;
   outline: 0;
+}
+
+textarea {
+  min-height: 10rem;
 }
