--- a/src/styles/default/type.less
+++ b/src/styles/default/type.less
@@ -12,6 +12,10 @@ h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0;       }
 
+p {
+  margin-top: 0;
+}
+
 a {
   background: transparent;
   color: @link-color;
@@ -28,9 +32,48 @@ a {
   }
 }
 
+
 hr {
   height: 1px;
   margin-top: 2rem; 
   margin-bottom: 2rem;
   border: 0; border-top: 1px solid #666;
+}
+
+
+ul {
+  list-style: circle inside; 
+}
+ol {
+  list-style: decimal inside; 
+}
+ol, ul {
+  padding-left: 0;
+  margin-top: 0; 
+}
+ul ul,
+ul ol,
+ol ol,
+ol ul {
+  margin: 1.5rem 0 1.5rem 3rem;
+  font-size: 90%; 
+}
+li {
+  margin-bottom: 1rem; 
+}
+
+
+code {
+  padding: .2rem .5rem;
+  margin: 0 .2rem;
+  font-size: 90%;
+  white-space: nowrap;
+  background: @bg-color--subtle;
+  border: 1px solid @border-color--subtle;
+  border-radius: 4px; 
+}
+pre > code {
+  display: block;
+  padding: 1rem 1.5rem;
+  white-space: pre; 
 }
