--- a/src/styles/default/form.less
+++ b/src/styles/default/form.less
@@ -33,6 +33,7 @@ form > div, form fieldset > div {
   display: block;
   margin-left: 1%;
   margin-right: 1%;
+  vertical-align: top;
 }
 
 label, legend {
@@ -46,10 +47,14 @@ fieldset {
 
 legend {
   padding: 0.2rem 0;
-  text-transform: uppercase;
-  font-size: 1.2rem;
+  font-size: 2rem;
+  width: 100%;
+  border-bottom: 1px solid @border-color--subtle;
 }
 
+form > footer {
+  margin-top: 3rem;
+}
 
 /* 
 ================================================
@@ -65,9 +70,10 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
+  margin-right: 1rem;
   color: @secondary-color;
   text-align: center;
-  font-weight: 600;
+  font-weight: bold;
   line-height: 38px;
   letter-spacing: .1rem;
   text-transform: uppercase;
@@ -183,4 +189,69 @@ textarea:focus, select:focus {
 
 textarea {
   min-height: 10rem;
+}
+
+label {
+  display: inline-block;
+  margin-right: 1rem;
+
+  input {
+    margin-left: 0.2rem;
+    margin-right: 0.3rem;
+  }
+}
+
+
+/* Larger than phablet */
+@media (min-width: @bp-larger-than-phablet) {
+  form > div, form fieldset > div {
+    width: 47%;
+    display: inline-block;
+    margin-left: 1.4%;
+    margin-right: 1%;
+  }
+}
+
+/* Larger than tablet */
+@media (min-width: @bp-larger-than-tablet) {
+  form > div, form fieldset > div {
+    width: 30%;
+    display: inline-block;
+    margin-left: 1.5%;
+    margin-right: 1%;
+  }
+}
+
+/* Larger than desktop */
+@media (min-width: @bp-larger-than-desktop) {
+  form > div, form fieldset > div {
+    width: 23%;
+    display: inline-block;
+    margin-left: 1%;
+    margin-right: 0.5%;
+  }
+
+  .button,
+  button,
+  input[type="submit"],
+  input[type="reset"],
+  input[type="button"] {
+    font-size: 1.3rem;
+    font-weight: normal;
+  }
+
+  input[type="date"],
+  input[type="time"],
+  input[type="datetime"],
+  input[type="email"],
+  input[type="number"],
+  input[type="search"],
+  input[type="text"],
+  input[type="tel"],
+  input[type="url"],
+  input[type="password"],
+  textarea,
+  select {
+    font-size: 1.5rem;
+  }
 }
