--- a/src/styles/default/main.css
+++ b/src/styles/default/main.css
@@ -446,18 +446,21 @@ apply a natural box layout model to all elements, but allowing components to cha
 */
 html {
   box-sizing: border-box;
-  font-size: 70.83%;
 }
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
+/* base coat */
+html {
+  font-size: 70.83%;
+}
 body {
-  font-size: 1.7em;
-  line-height: 1.5;
+  font-size: 1.85em;
+  line-height: 1.6;
   background-color: #242628;
-  color: #777777;
+  color: #888888;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 /* spacing */
@@ -618,6 +621,7 @@ form fieldset > div {
   display: block;
   margin-left: 1%;
   margin-right: 1%;
+  vertical-align: top;
 }
 label,
 legend {
@@ -629,8 +633,12 @@ fieldset {
 }
 legend {
   padding: 0.2rem 0;
-  text-transform: uppercase;
-  font-size: 1.2rem;
+  font-size: 2rem;
+  width: 100%;
+  border-bottom: 1px solid #333434;
+}
+form > footer {
+  margin-top: 3rem;
 }
 /* 
 ================================================
@@ -645,9 +653,10 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
+  margin-right: 1rem;
   color: #555555;
   text-align: center;
-  font-weight: 600;
+  font-weight: bold;
   line-height: 38px;
   letter-spacing: .1rem;
   text-transform: uppercase;
@@ -759,6 +768,66 @@ select:focus {
 textarea {
   min-height: 10rem;
 }
+label {
+  display: inline-block;
+  margin-right: 1rem;
+}
+label input {
+  margin-left: 0.2rem;
+  margin-right: 0.3rem;
+}
+/* Larger than phablet */
+@media (min-width: 550px) {
+  form > div,
+  form fieldset > div {
+    width: 47%;
+    display: inline-block;
+    margin-left: 1.4%;
+    margin-right: 1%;
+  }
+}
+/* Larger than tablet */
+@media (min-width: 750px) {
+  form > div,
+  form fieldset > div {
+    width: 30%;
+    display: inline-block;
+    margin-left: 1.5%;
+    margin-right: 1%;
+  }
+}
+/* Larger than desktop */
+@media (min-width: 1000px) {
+  form > div,
+  form fieldset > div {
+    width: 23%;
+    display: inline-block;
+    margin-left: 1%;
+    margin-right: 0.5%;
+  }
+  .button,
+  button,
+  input[type="submit"],
+  input[type="reset"],
+  input[type="button"] {
+    font-size: 1.3rem;
+    font-weight: normal;
+  }
+  input[type="date"],
+  input[type="time"],
+  input[type="datetime"],
+  input[type="email"],
+  input[type="number"],
+  input[type="search"],
+  input[type="text"],
+  input[type="tel"],
+  input[type="url"],
+  input[type="password"],
+  textarea,
+  select {
+    font-size: 1.5rem;
+  }
+}
 table {
   width: 100%;
 }
@@ -778,5 +847,11 @@ td:last-child {
 }
 tbody td {
   color: #bbbbbb;
+}
+/* Larger than desktop */
+@media (min-width: 1000px) {
+  body {
+    font-size: 1.7em;
+  }
 }
 /*# sourceMappingURL=main.css.map */
