Add body>header to layout styling. Add app-bar styling (custom tag)

--- a/src/styles/default/form.less
+++ b/src/styles/default/form.less
@@ -73,8 +73,8 @@ input[type="button"] {
   margin-right: 1rem;
   color: @secondary-color;
   text-align: center;
-  font-weight: bold;
-  line-height: 38px;
+  font-size: 1.8rem;
+  line-height: 1.6rem;
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -236,7 +236,7 @@ label {
   input[type="submit"],
   input[type="reset"],
   input[type="button"] {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: normal;
   }
 
@@ -252,6 +252,8 @@ label {
   input[type="password"],
   textarea,
   select {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
+    height: 3rem;
   }
+
 }
