--- a/src/styles/default/main.less
+++ b/src/styles/default/main.less
@@ -103,12 +103,14 @@ MODULES
 @import 'type.less';
 @import 'form.less';
 @import 'table.less';
+@import 'layout.less';
+@import 'tags.less';
 
 
 
 /* Larger than desktop */
 @media (min-width: @bp-larger-than-desktop) {
   body {
-    font-size: 1.7em; 
+    font-size: 1.5em; 
   }
 }
