--- a/src/styles/default/main.less
+++ b/src/styles/default/main.less
@@ -75,6 +75,8 @@ body {
   background-color: @bg-color;
   color: @text-color;
   font-family: @font-family;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* spacing */
