--- a/src/styles/default/main.css
+++ b/src/styles/default/main.css
@@ -462,6 +462,8 @@ body {
   background-color: #242628;
   color: #888888;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 /* spacing */
 pre,
@@ -790,10 +792,10 @@ label input {
 @media (min-width: 750px) {
   form > div,
   form fieldset > div {
-    width: 30%;
+    width: 32.1%;
     display: inline-block;
-    margin-left: 1.5%;
-    margin-right: 1%;
+    margin-left: 0.5%;
+    margin-right: 0.2%;
   }
 }
 /* Larger than desktop */
@@ -864,6 +866,53 @@ body > header {
   color: #aaa;
   box-shadow: 0 0 0.6em rgba(17, 17, 17, 0.3);
   z-index: 1001;
+}
+/* 
+================================================
+aside
+================================================
+*/
+body > aside {
+  position: fixed;
+  z-index: 1000;
+  top: 5rem;
+  left: 0;
+  bottom: 0;
+  background: #222;
+  font-size: 1.3rem;
+  padding: 1rem;
+  width: 20rem;
+  border-right: 2px solid #333;
+  transform: translateX(-100%);
+  transition: 500ms cubic-bezier(0.09, 0.68, 0, 0.99);
+  visibility: hidden;
+}
+body > aside.off-screen {
+  transform: translateX(-100%);
+  transition: 500ms cubic-bezier(0.09, 0.68, 0, 0.99);
+  visibility: hidden;
+}
+body > aside.show,
+body > aside.off-screen.show {
+  visibility: visible;
+  transform: translateX(0);
+}
+/* 
+================================================
+main
+================================================
+*/
+main {
+  padding: 1rem 1.5rem;
+}
+/* Larger than desktop */
+@media (min-width: 1000px) {
+  body > aside {
+    display: inline-block;
+  }
+  main {
+    display: inline-block;
+  }
 }
 app-bar,
 .app-bar {
