--- a/src/styles/default/main.css
+++ b/src/styles/default/main.css
@@ -464,6 +464,7 @@ body {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 /* spacing */
 pre,
@@ -831,12 +832,14 @@ label input {
   input[type="password"],
   textarea,
   select {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     height: 3rem;
   }
 }
 table {
   width: 100%;
+  overflow: auto;
+  display: block;
 }
 th,
 td {
@@ -854,6 +857,13 @@ td:last-child {
 }
 tbody td {
   color: #bbbbbb;
+}
+/* Larger than tablet */
+@media (min-width: 750px) {
+  table {
+    display: table;
+    overflow: none;
+  }
 }
 /* 
 ================================================
@@ -885,7 +895,7 @@ body > aside {
   background: #222;
   font-size: 1.3rem;
   padding: 1rem;
-  width: 20rem;
+  width: 18rem;
   border-right: 2px solid #333;
   transform: translateX(-100%);
   transition: 500ms cubic-bezier(0.09, 0.68, 0, 0.99);
@@ -911,11 +921,21 @@ main {
 }
 /* Larger than desktop */
 @media (min-width: 1000px) {
-  body > aside {
-    display: inline-block;
+  body {
+    display: table;
+    width: 100%;
   }
-  main {
-    display: inline-block;
+  body > aside {
+    padding-top: 8rem;
+    position: inherit;
+    display: table-cell;
+    vertical-align: top;
+    visibility: inherit;
+    transform: inherit;
+  }
+  body > main {
+    display: table-cell;
+    border-left: 2px solid #333434;
   }
 }
 app-bar,
@@ -1011,6 +1031,35 @@ app-menu[type="overflow"][expanded] ul,
   border-top: none;
   width: 50%;
   opacity: 0.9;
+}
+nav ul,
+nav li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+nav ul {
+  margin-left: 1.9rem;
+}
+nav li {
+  margin-top: 0.2rem;
+}
+nav h3 {
+  font-size: 1.4rem;
+  line-height: 1.8;
+  margin: 0;
+}
+nav header {
+  font-size: 1.2rem;
+  border-bottom: 1px solid #333;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+}
+nav header h3 {
+  margin-bottom: 1rem;
+}
+nav nav-item {
+  margin-bottom: 1.2rem;
 }
 /* Larger than desktop */
 @media (min-width: 1000px) {
