--- a/src/styles/default/main.less
+++ b/src/styles/default/main.less
@@ -77,6 +77,7 @@ body {
   font-family: @font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 /* spacing */
