--- a/src/styles/default/tags.less
+++ b/src/styles/default/tags.less
@@ -89,3 +89,41 @@ app-menu,
     }
   }
 }
+
+
+nav {
+  ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  ul {
+    margin-left: 1.9rem;
+  }
+
+  li {
+    margin-top: 0.2rem;
+  }
+
+  h3 { 
+    font-size: 1.4rem; 
+    line-height: 1.8;
+    margin: 0;
+  }
+
+  header {
+    font-size: 1.2rem;
+    border-bottom: 1px solid #333;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+
+    h3 {
+      margin-bottom: 1rem;
+    }
+  }
+
+  nav-item {
+    margin-bottom: 1.2rem;
+  }
+}
