Fix up the display of top content in main.

--- a/src/styles/spade/layout.less
+++ b/src/styles/spade/layout.less
@@ -24,7 +24,7 @@ aside
 body > aside {
   position: fixed;
   z-index: 1000;
-  top: 5rem;
+  top: 6rem;
   left: 0;
   bottom: 0;
   background: #222;
@@ -55,7 +55,7 @@ main
 ================================================
 */
 main {
-  padding: 1rem 1.5rem;
+  padding: 6rem 1.5rem 1rem 1.5rem;
 }
 
 
@@ -68,7 +68,7 @@ main {
   }
 
   body > aside {
-    padding-top: 8rem;
+    padding-top: 6rem;
     position: inherit;
     display: table-cell;
     vertical-align: top;
